# arena

./: .gitignore  CMakeLists.txt  README.md  arctic_overview.docx  arctic_phase2_math_deepdive.md  ~$ctic_overview.docx
.github/workflows/: deploy.yml
data/: live_adaptation.csv  sweep_results.csv
scripts/: plot_convergence.py  plot_decay.py  plot_live_adaptation.py
src/: arena_allocator.hpp  live_adaptation_logger.cpp  live_latency.cpp  live_latency.hpp  main.cpp  math_utils.cpp  math_utils.hpp  ou_sampler.cpp  ou_sampler.hpp  race_resolver.hpp  single_agent.cpp  single_agent.hpp  spsc_buffer.hpp  sweep_generator.cpp  test_ks.cpp  tsc_clock.hpp  wasm_core.cpp
tests/: echo_server.py  stress.py  test_math.cpp  test_ou_sampler.cpp  udp_echo_server.py
web/: CMakeLists.txt  index.html  package.json  vercel.json  vite.config.ts
web/public/: coi-serviceworker.js
web/scripts/: build-wasm.sh  prerender-formulas.mjs
web/src/: App.tsx  ArenaLogo.tsx  CursorSparkles.tsx  RaceGame.tsx  Tex.tsx  WebGLCanvas.tsx  arctic_wasm.js  arctic_wasm.wasm  formulas.mjs  index.css  prerendered-formulas.json
